fix web design for notification ocmponent removing search bar align the notifs and change position of date , handle also the problem with the notif of the request now everything is conform to figma

--- a/src/app/notifications/notification.component.css
+++ b/src/app/notifications/notification.component.css
@@ -349,11 +349,11 @@ input[type='date']::-webkit-calendar-picker-indicator:hover {
 }
 
 /* will be uncommented */
-/* .pic_avatar_notif {
+ .pic_avatar_notif {
   bottom: 0.5em;
   position: relative;
   height: 3em;
-} */
+} 
 @media (max-width: 500px) {
   .pic_avatar_notif {
     bottom: 0em !important;
